--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,37 @@ torchvision==0.12.0+cpu
 aiogram~=2.21
 numpy~=1.22.4
 Pillow~=9.1.1
+typing_extensions==4.2.0 
+point==0.0.1
+pyparsing==3.0.9 
+pytz==2022.1
+requests==2.28.0
+rfc3986==1.5.0 
+sniffio==1.2.0
+tgclient==1.5.3
+Token==1.8.6
+packaging==21.3
+pandas==1.4.3
+aiohttp==3.8.1
+aiosignal==1.2.0
+anyio==3.6.1
+async-timeout==4.0.2
+attrs==21.4.0 
+certifi==2022.6.15
+charset-normalizer==2.0.12
+click==8.1.3
+clients==1.3
+cycler==0.11.0 
+emoji==1.7.0
+eng==0.1.1 
+fonttools==4.33.3
+frozenlist==1.3.0
+greenlet==1.1.2
+h11==0.12.0
+httpcore==0.15.0
+httpx==0.23.0
+idna==3.3
+importlib-metadata==4.11.4
+inline==0.0.1  
+matplotlib==3.5.2
+multidict==6.0.2
